# crimson-shells

./: .gitignore  CMakeLists.txt  README.md  arenatest  data  settings.ini
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
data/: arenatest.json  prefabs  prefabs.json
data/states/: UIaudioSettingsState.json  UIcontrolsSettingsState.json  UIdisplaySettingsState.json  UIgameSettingsState.json  UIgarageState.json  UImainMenuState.json  UIpauseState.json  UIsettingsState.json
src/: DLinkList.c  arena.c  builder.c  displayManager.c  displayOptionsState.c  ecs.c  engine.c  fontManager.c  inputManager.c  main.c  mainLoop.c  mainMenuState.c  optionsState.c  pauseState.c  playState.c  resourceManager.c  stateManager.c  uiManager.c  vec2.c
src/engine/: arena.c  arena.h  builder.c  builder.h  collisionManager.c  collisionManager.h  displayManager.c  displayManager.h  ecs.c  ecs.h  engine.c  engine.h  inputManager.c  inputManager.h  resourceManager.c  resourceManager.h  uiManager.c  uiManager.h
src/engine/core/: componentFactory.c  componentFactory.h  ecs.c  ecs.h  engine.c  engine.h
src/engine/io/: displayManager.c  displayManager.h  inputManager.c  inputManager.h
src/engine/ui/: uiManager.c  uiManager.h
src/global/: DLinkList.c  DLinkList.h  debug.c  debug.h  global.h  hashMap.c  hashMap.h  vec2.c
src/global/utils/: DLinkList.c  hashMap.c  hashMap.h  vec2.c  vec2.h
src/include/: DLinkList.h  arena.h  builder.h  displayManager.h  ecs.h  engine.h  fontManager.h  global.h  inputManager.h  mainLoop.h  mainMenuState.h  pauseState.h  playState.h  resourceManager.h  stateManager.h  tanki.h  uiManager.h  vec2.h
src/states/: audioSettingsState.c  controlsSettingsState.c  displaySettingsState.c  gameSettingsState.c  garageState.c  mainMenuState.c  pauseState.c  playState.c  settingsState.c  stateManager.c  stateManager.h
src/states/menus/: garageState.c  mainMenuState.c  pauseState.c
src/states/menus/settings/: audioSettingsState.c  controlsSettingsState.c  displaySettingsState.c  gameSettingsState.c  settingsState.c
src/util/: img_pixelate.py
